--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "Polymer": "Polymer/polymer#~0.5.1",
     "core-elements": "Polymer/core-elements#~0.5.1",
-    "webcomponentsjs": "polymer/webcomponentsjs#~0.5.1"
+    "webcomponentsjs": "polymer/webcomponentsjs#~0.5.1",
+    "paper-elements": "Polymer/paper-elements#~0.5.2"
   },
   "devDependencies": {},
   "resolutions": {
