--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "Polymer": "Polymer/polymer#~0.5.1",
     "core-elements": "Polymer/core-elements#~0.5.1",
     "webcomponentsjs": "polymer/webcomponentsjs#~0.5.1",
-    "paper-elements": "Polymer/paper-elements#~0.5.2"
+    "paper-elements": "Polymer/paper-elements#~0.5.2",
+    "polymer-filters": "addyosmani/polymer-filters#~0.1.0"
   },
   "devDependencies": {},
   "resolutions": {
