--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "core-elements": "Polymer/core-elements#~0.5.1",
     "webcomponentsjs": "polymer/webcomponentsjs#~0.5.1",
     "paper-elements": "Polymer/paper-elements#~0.5.2",
-    "polymer-filters": "addyosmani/polymer-filters#~0.1.0"
+    "polymer-filters": "addyosmani/polymer-filters#~0.1.0",
+    "moment": "~2.9.0"
   },
   "devDependencies": {},
   "resolutions": {
