--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "webcomponentsjs": "polymer/webcomponentsjs#~0.5.1",
     "paper-elements": "Polymer/paper-elements#~0.5.2",
     "polymer-filters": "addyosmani/polymer-filters#~0.1.0",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "chartjs": "~1.0.1"
   },
   "devDependencies": {},
   "resolutions": {
