--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.0.2",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-concat": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-jshint": "~0.5.4",
-    "grunt-contrib-connect": "0.3.0",
-    "grunt-contrib-clean": "0.4.0",
-    "grunt-contrib-watch": "~0.4.0",
-    "grunt-mocha": "~0.3.1",
-    "grunt-bower-requirejs": "~0.4.1",
-    "grunt-usemin": "~0.1.10",
-    "grunt-rev": "~0.1.0",
-    "grunt-vulcanize": "~0.1.1",
     "connect-livereload": "~0.2.0",
-    "time-grunt": "~0.1.0",
+    "grunt": "~0.4.1",
+    "grunt-bower-requirejs": "~0.4.1",
+    "grunt-contrib-clean": "0.4.0",
+    "grunt-contrib-concat": "~0.2.0",
+    "grunt-contrib-connect": "0.3.0",
+    "grunt-contrib-copy": "~0.4.0",
+    "grunt-contrib-jshint": "~0.5.4",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.4.0",
+    "grunt-gh-pages": "^0.9.1",
+    "grunt-mocha": "~0.3.1",
+    "grunt-rev": "~0.1.0",
+    "grunt-usemin": "~0.1.10",
+    "grunt-vulcanize": "~0.1.1",
+    "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0",
-    "jshint-stylish": "~0.1.3"
+    "time-grunt": "~0.1.0"
   },
   "engines": {
     "node": ">=0.8.0"
